pass zip custom type as argument in query

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,12 @@ android {
     }
 }
 
+apollo {
+    customTypeMapping = [
+        "Zip" : "spike.chen.graphqlspike.Zip"
+    ]
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
